[package]
authors = ["Lane Kolbly <lane@rscheme.org>"]
description = "A crate to communicate with u-blox GPS devices using the UBX protocol"
edition = "2021"
license = "MIT"
name = "ublox"
readme = "../README.md"
repository = "https://github.com/lkolbly/ublox"
version = "0.4.4"

[features]
alloc = []
default = ["std", "serde"]
std = []

[dependencies]
bitflags = "2.3.1"
chrono = {version = "0.4.19", default-features = false, features = []}
num-traits = {version = "0.2.12", default-features = false}
serde = {version = "1.0.144", optional = true, default-features = false, features = ["derive"]}
ublox_derive = {path = "../ublox_derive"}

[dev-dependencies]
cpu-time = "1.0.0"
cpuprofiler = "0.0.4"
# Latest depends on clap v4 which requires rustc 1.70
criterion = "0.4.0"
rand = "0.8.5"
serde_json = "1.0.85"

[[bench]]
harness = false
name = "packet_benchmark"
