[package]
authors = ["Lane Kolbly <lane@rscheme.org>"]
description = "A crate to communicate with u-blox GPS devices using the UBX protocol"
edition = "2021"
license = "MIT"
name = "ublox"
readme = "../README.md"
repository = "https://github.com/lkolbly/ublox"
version = "0.4.5"

[features]
ubx_proto23 = []
ubx_proto27 = []
ubx_proto31 = []
default = ["std", "serde", "ubx_proto23"]

alloc = []
std = []

[dependencies]
bitflags = "2.3"
chrono = { version = "0.4", default-features = false, features = [] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
ublox_derive = { path = "../ublox_derive", version = "=0.1.0" }

[dev-dependencies]
cpu-time = "1.0"
cpuprofiler = "0.0"
criterion = "0.5"
rand = "0.8"
serde_json = "1.0"

[[bench]]
harness = false
name = "packet_benchmark"
