[package]
authors = ["Lane Kolbly <lane@rscheme.org>"]
description = "A crate to communicate with u-blox GPS devices using the UBX protocol"
name = "ublox"
homepage = "https://github.com/ublox-rs"
repository = "https://github.com/ublox-rs/ublox"
version = "0.7.0"
rust-version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
ubx_proto14 = []
ubx_proto23 = []
ubx_proto27 = []
ubx_proto31 = []
default = ["std", "serde", "ubx_proto23"]

# Unlock RXM-SFRBX GPS and QZSS interpretation
sfrbx-gps = [
    "gnss-protos",
    "gnss-protos/gps",
]

alloc = []
std = []

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
bitflags = "2.3"
chrono = { version = "0.4", default-features = false, features = [] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
ublox_derive = { path = "../ublox_derive", version = "=0.3.0" }

gnss-protos = { version = "0.0.2", optional = true }

[dev-dependencies]
cpu-time = "1.0"
cpuprofiler = "0.0"
criterion = "0.7"
rand = "0.9"
serde_json = "1.0"

[[bench]]
harness = false
name = "packet_benchmark"
