[package]
name = "ublox_cli"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ublox = { path = "../ublox" }
serialport = "3.3.0"
clap = "2.33.3"
chrono = "0.4.15"
serde_json = "1.0.85"
