[package]
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
name = "ublox_cli"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
clap = {version = "4.2.7", features = ["cargo"]}
serde_json = "1.0.105"
serialport = "4.2.2"
ublox = {path = "../ublox"}
