[package]
authors = ["Lane Kolbly <lane@rscheme.org>"]
description = "Utility macros for the ublox crate"
name = "ublox_derive"
version = "0.2.0"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
# cannot be bumped to major relese:
# see API changes at https://github.com/dtolnay/syn/releases/tag/2.0.0
syn = { version = "2.0", features = ["extra-traits", "full"] }

[dev-dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
which = { version = "7.0.2", default-features = false }
pretty_assertions = "1.4.1"
