[package]
authors = ["Lane Kolbly <lane@rscheme.org>"]
description = "Utility macros for the ublox crate"
name = "ublox_derive"
version = "0.4.0"
homepage = "https://github.com/ublox-rs"
repository = "https://github.com/ublox-rs/ublox"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
default = ["std"]
std = []
_internal_debug = ["syntect", "std"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
# cannot be bumped to major relese:
# see API changes at https://github.com/dtolnay/syn/releases/tag/2.0.0
syn = { version = "1.0", features = ["extra-traits", "full"] }
syntect = { version = "5.2", optional = true }                 # For syntax highlighting of printed code

[dev-dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
which = { version = "8.0", default-features = false, features = ["real-sys"] }
pretty_assertions = "1.4"
