[package]
name = "ubx_protocol"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>", "Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
license = "MIT"
description = "A crate to parse/generate messages of UBX protocol (proprietary u-blox GPS devices protocol)"
build = "build.rs"

[dependencies]
bitflags = "1.2.1"

[dev-dependencies]
rand = "0.7.3"
cpu-time = "1.0.0"

[build-dependencies]
ublox_derive = "0.0.1"
env_logger = "0.7"