[package]
description = "Demonstrate basic usage of uBlox package"
authors = [
    "Lane Kolbly <lane@rscheme.org>",
    "Andrei Gherghescu <andrei-ng@protonmail.com>",
]
name = "basic-cli"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["ubx_proto23"]
ubx_proto23 = ["ublox_device/ubx_proto23"]
ubx_proto27 = ["ublox_device/ubx_proto27"]
ubx_proto31 = ["ublox_device/ubx_proto31"]

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }

ublox_device = { path = "../ublox-device", default-features = false, optional = true }
