[package]
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
edition = "2021"
name = "dds"
publish = false
rust-version = "1.70"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo", "derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
rustdds = "0.11"
log = "0.4"
anyhow = "1.0"
rand = "0.9"
env_logger = "0.11"
futures = "0.3"
smol = { version = "2.0" }

ublox = { path = "../../ublox", default-features = true }
ublox_device = { path = "../ublox_device" }

[[bin]]
name = "dds-nav-pvt-publisher"
path = "src/bin/nav-pvt-publisher.rs"

[[bin]]
name = "dds-subscriber"
path = "src/bin/subscriber.rs"

[[bin]]
name = "dds-dummy-publisher"
path = "src/bin/dummy-publisher.rs"
