[package]
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
description = "uBlox DDS example"
name = "dds"
publish = false
rust-version.workspace = true
license.workspace = true
edition.workspace = true
version = "0.1.0"

[features]
default = ["alloc", "ubx_proto23"]
alloc = ["ublox/alloc"]
ubx_proto23 = ["ublox/ubx_proto23", "ublox_device/ubx_proto23"]
ubx_proto27 = ["ublox/ubx_proto27", "ublox_device/ubx_proto27"]
ubx_proto31 = ["ublox/ubx_proto31", "ublox_device/ubx_proto31"]

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo", "derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
rand = "0.9"
env_logger = "0.11"
futures = "0.3"
smol = { version = "2.0" }
rustdds = "0.11"

ublox_device = { path = "../ublox-device", default-features = false, optional = true }
ublox = { path = "../../ublox", default-features = false, optional = true }

[[bin]]
name = "dds-nav-pvt-publisher"
path = "src/bin/nav-pvt-publisher.rs"

[[bin]]
name = "dds-subscriber"
path = "src/bin/subscriber.rs"

[[bin]]
name = "dds-dummy-publisher"
path = "src/bin/dummy-publisher.rs"
