[package]
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
description = "Use Data Distribution Service (DDS) to send data across LAN"
name = "dds"
publish = false
rust-version = "1.90.0"
license.workspace = true
edition.workspace = true
version = "0.1.0"

[features]
default = ["ubx_proto14", "ubx_proto23", "ubx_proto27", "ubx_proto31", "ubx_proto33"]
ubx_proto14 = ["ublox-device/ubx_proto14"]
ubx_proto23 = ["ublox-device/ubx_proto23"]
ubx_proto27 = ["ublox-device/ubx_proto27"]
ubx_proto31 = ["ublox-device/ubx_proto31"]
ubx_proto33 = ["ublox-device/ubx_proto33"]

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo", "derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
rand = "0.9"
env_logger = "0.11"
futures = "0.3"
smol = { version = "2.0" }
rustdds = "0.11"

ublox-device = { path = "../ublox-device", default-features = false, optional = true }

[[bin]]
name = "dds-nav-pvt-publisher"
path = "src/bin/nav-pvt-publisher.rs"

[[bin]]
name = "dds-subscriber"
path = "src/bin/subscriber.rs"

[[bin]]
name = "dds-dummy-publisher"
path = "src/bin/dummy-publisher.rs"
