[package]
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
name = "send-receive"
description = "Demonstrate usage of the uBlox package for ESF+ADR mode with one thread for receiving and one for sending UBX messages."
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version = "0.1.0"

[features]
default = ["ubx_proto14", "ubx_proto23", "ubx_proto27", "ubx_proto31"]
ubx_proto14 = ["ublox-device/ubx_proto14"]
ubx_proto23 = ["ublox-device/ubx_proto23"]
ubx_proto27 = ["ublox-device/ubx_proto27"]
ubx_proto31 = ["ublox-device/ubx_proto31"]

[dependencies]
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }
serialport = "4.2"

ublox-device = { path = "../ublox-device", default-features = false, optional = true }
