[package]
name = "simple-parse"
version = "0.1.0"
rust-version = "1.90.0"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
exclude.workspace = true

[features]
default = ["ubx_proto14", "ubx_proto23", "ubx_proto27", "ubx_proto31", "ubx_proto33"]
ubx_proto14 = ["ublox/ubx_proto14"]
ubx_proto23 = ["ublox/ubx_proto23"]
ubx_proto27 = ["ublox/ubx_proto27"]
ubx_proto31 = ["ublox/ubx_proto31"]
ubx_proto33 = ["ublox/ubx_proto33"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serialport = { version = "4.2", default-features = false }
ublox = { path = "../../ublox", default-features = false, features = ["alloc"] }
