[package]
name = "ublox-device"
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
description = "An uBlox device implementation for reuse in examples"
publish = false
edition.workspace = true
rust-version = "1.90.0"
license.workspace = true
version = "0.1.0"

[features]
default = ["ubx_proto14", "ubx_proto23", "ubx_proto27", "ubx_proto31", "ubx_proto33"]
ubx_proto14 = ["ublox/ubx_proto14"]
ubx_proto23 = ["ublox/ubx_proto23"]
ubx_proto27 = ["ublox/ubx_proto27"]
ubx_proto31 = ["ublox/ubx_proto31"]
ubx_proto33 = ["ublox/ubx_proto33"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["cargo"] }
serialport = { version = "4.2", default-features = false }

ublox = { path = "../../ublox", default-features = false, features = ["alloc"] }
