[package]
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
description = "A TUI for visualizing PVT and other UBX messages"
name = "ublox-tui"
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true
version = "0.1.0"

[features]
default = ["ubx_proto14", "ubx_proto23", "ubx_proto27", "ubx_proto31"]
ubx_proto14 = ["ublox_device/ubx_proto14"]
ubx_proto23 = ["ublox_device/ubx_proto23"]
ubx_proto27 = ["ublox_device/ubx_proto27"]
ubx_proto31 = ["ublox_device/ubx_proto31"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
env_logger = "0.11"
indoc = "2"
log = "0.4"
ratatui = { version = "0.29", features = ["crossterm"] }
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
lazy_static = "1.5"
tracing-error = "0.2"
tui-logger = { version = "0.17", features = ["crossterm", "tracing-support"] }
directories = "6.0"

ublox_device = { path = "../ublox-device", default-features = false, optional = true }
