[package]
name = "ublox_device"
authors = ["Andrei Gherghescu <andrei-ng@protonmail.com>"]
edition = "2021"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }
serde_json = "1.0"
serialport = "4.2"

ublox = { path = "../../ublox", default-features = false }

[features]
default = ["alloc", "ubx_proto23"]
alloc = ["ublox/alloc"]
ubx_proto23 = ["ublox/ubx_proto23"]
ubx_proto27 = ["ublox/ubx_proto27"]
ubx_proto31 = ["ublox/ubx_proto31"]
